erDiagram
%% Core Venue Relationships
    VENUES ||--o{ ZONES: contains

%% Amenity Management
    AMENITY_CATEGORIES ||--o{ AMENITIES: contains
    AMENITIES ||--o{ ZONE_AMENITIES: "available in"
    ZONES ||--o{ ZONE_AMENITIES: has

%% Zone Management
    ZONES ||--o{ ZONE_AMENITIES: has

%% Status Management
    VENUES }|--|| STATUS_TYPES: "has status"
    ZONES }|--|| STATUS_TYPES: "has status"

%% Image Management
    IMAGES }|--|| VENUES: "belongs to"
    IMAGES }|--|| ZONES: "belongs to"

    VENUES {
        uuid id PK
        uuid owner_id
        text name
        text description
        integer max_capacity
        decimal rating
        smallint booking_timeline
        uuid status_id FK
    }

    ZONES {
        uuid id PK
        uuid venue_id FK
        text name
        text description
        integer capacity
        uuid status_id FK
        decimal length
        decimal width
        decimal height
        decimal area
        decimal hourly_fee
        decimal excess_fee
        smallint min_booking_duration
        smallint max_booking_duration
    }


    AMENITY_CATEGORIES {
        uuid id PK
        text name
        text description
        text icon_url
        smallint sort_order
        timestamp created_at
        uuid created_by
    }

    AMENITIES {
        uuid id PK
        uuid category_id FK
        text name
        text description
        text icon_url
        timestamp created_at
        uuid created_by
    }

    ZONE_AMENITIES {
        uuid id PK
        uuid zone_id FK
        uuid amenity_id FK
        text note
        timestamp created_at
        uuid created_by
    }

    STATUS_TYPES {
        uuid id PK
        text type
        text name
        text display_name
        smallint sort
    }

    IMAGES {
        uuid id PK
        uuid entity_id
        text url
        smallint sort_order
        text entity_type "VENUE|ZONE"
        text type "THUMBNAIL|FULL|BANNER"
        bigint size
        integer width
        integer height
    }